--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-  <ul class="nav nav-tabs">
-    <li><%= link_to "Bloccit", root_path %></li>
-    <li><%= link_to "About", about_path %></li>
-  </ul>
-</div>
-<%= yield %>
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Bloccit", root_path %></li>
+      <li><%= link_to "About", about_path %></li>
+    </ul>
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+
+  <%= yield %>
+  </div>
 
 </body>
 </html>
