--- a/app/views/advertisement/new.html.erb
+++ b/app/views/advertisement/new.html.erb
@@ -2,11 +2,11 @@
 
 <div class="row">
   <div class="col-md-4">
-    <p>Guidelines for advertisements</p>
+    <p>Guidelines for advertisement</p>
     <ul>
-      <li>Make sure it rhymes.</li>
-      <li>Don't use the letter "A"</li>
-      <li>The incessant use of hashtags will get you banned</li>
+      <li>Make sure it is funny.</li>
+      <li>Use MySpace instead of Facebook.</li>
+      <li>The incessant use of emoji will get you burned at the stake.</li>
     </ul>
   </div>
   <div class="col-md-8">
