--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -15,8 +15,10 @@
       </div>
     </div>
     <%end %>
+
   </div>
   <div class="col-md-4">
     <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <%= link_to "New Sponsored Post", new_topic_sponsoredpost_path(@topic), class: 'btn btn-success' %>
   </div>
 </div>
