--- a/app/views/sponsored_posts/edit.html.erb
+++ b/app/views/sponsored_posts/edit.html.erb
@@ -19,6 +19,10 @@
       <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter sponsored post body." %>
     </div>
     <div class="form-group">
+      <%= f.label :price %>
+      <%= f.text_field :price, class: 'form-control', placeholder: "Enter sponsored post price" %>
+    </div>
+    <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
     <% end %>
