--- a/app/views/sponsored_posts/show.html.erb
+++ b/app/views/sponsored_posts/show.html.erb
@@ -4,9 +4,12 @@
     <p>
       <%= @sponsoredpost.body %>
     </p>
+    <p>
+      <%= @sponsoredpost.price %>
+    </p>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit", edit_topic_sponsoredpost_path(@sponsoredpost.topic, @sponsoredpost), class: 'btn btn-success' %>
+    <%= link_to "Edit", edit_topic_sponsored_post_path(@sponsoredpost.topic, @sponsoredpost), class: 'btn btn-success' %>
     <%= link_to "Delete Post", [@sponsoredpost.topic, @sponsoredpost], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
   </div>
 </div>
