--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Sign Up</h2>
 <div class="row">
   <div class="col-md-8">
-    <%= form_for @user do |f| %>
+    <%= form_for @user, url: {action: :confirm} do |f| %>
       <% if @user.errors.any? %>
         <div class="alert alert-danger">
           <h4><%= pluralize(@user.errors.count, "error") %></h4>
@@ -29,6 +29,7 @@
         <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
       <% end %>
       <div class="form-group">
+        <!-- this goes to conrfirmation page -->
         <%= f.submit "Sign up", class: 'btn btn-success' %>
       </div>
     <% end %>
