--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,17 @@
       <li><%= link_to "About", about_path %></li>
       <div class="pull-right user-info">
         <% if current_user %>
-          <%= current_user.name %> - <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+          <%= current_user.name %>
+        </br>
+          <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+
         <% else %>
           <%= link_to "Sign In", new_session_path %>
           <%= link_to "Sign Up", new_user_path %>
         <% end %>
+      </div>
+      <div class="pull-right avatar">
+        <%= image_tag avatar_url(current_user) %>
       </div>
     </ul>
     <% if flash[:notice] %>
