assign 32 rails public profiles complete

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,6 +29,7 @@
   <div class="col-md-4">
   <h3>
     <%= pluralize(@post.points, 'point') %>
+    <%= @post.total_votes %>
     <div>
       <small>
         <%= pluralize(@post.up_votes, 'up vote') %>,
